--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -1,26 +1,33 @@
 <div id="content"
+head {}
 
 h1 {
-  color: white;
-  font-size: 100%;
-}
-
-p {
   font-family: "helvetica";
   color: white;
   text-indent: "30px";
 }
 
+p {
+  font-family: "helvetica";
+  color: grey;
+  text-indent: "30px";
+}
+
 img {
-  width: 600px;
+  width: 700px;
+}
+
+a {
+  font-family: "ariel";
+  color: white;
 }
 
 #content {
   background-color: black;
-  width: 350px;
-  min-height: 30px;
+  width: 700px;
+  min-height: 40px;
   padding: 40px;
-  margin: 40px;
+  margin: 100px;
   border: solid 10px red;
   font-size: 24px;
 }
